Fixed css modal conflicts

--- a/components/checkout-module/client/styles/input.scss
+++ b/components/checkout-module/client/styles/input.scss
@@ -5,7 +5,7 @@ $border-bot: 1px solid rgb(218, 216, 216);
 $button-size: 24px;
 $small-font: 13px;
 
-.modal {
+.checkout-modal {
     position: absolute;
     top: 40%;
     left: 50%;
