--- a/components/review-module/client/src/stylesheets/style.scss
+++ b/components/review-module/client/src/stylesheets/style.scss
@@ -67,7 +67,7 @@ body {
   margin-bottom: 15px;
 }
 
-.btn-light {
+.dropdown .btn-light {
   border-color: #2f2c2c33;
   color: #212529;
   background-color: #f8f9fa00;
