--- a/components/checkout-module/client/styles/desc.scss
+++ b/components/checkout-module/client/styles/desc.scss
@@ -8,7 +8,7 @@ $font-family: Arial, Helvetica, sans-serif;
     left: $left;
 }
 
-body {
+checkout-body {
     width: 100%;
     justify-content: center;
     font-family: $font-family;
