--- a/components/checkout-module/client/styles/input.scss
+++ b/components/checkout-module/client/styles/input.scss
@@ -90,7 +90,6 @@ $small-font: 13px;
 }
 
 .header {
-    margin: 18px auto 18px auto;
     font-size: $small-font;
     padding-bottom: 18px;
     width: $width * .9;
@@ -190,6 +189,18 @@ $small-font: 13px;
     }
 }
 
+@media screen and (max-width: 576px) {
+    .sub-but {
+        max-width: 40% !important;
+        margin: auto auto auto 10px !important;
+    }
+    .footer {
+        .header {
+            margin: auto 10px auto auto;
+        }
+    }
+}
+
 
 
 .info {
@@ -202,7 +213,7 @@ $small-font: 13px;
 .sub-but {
     width: $width * .9;
     height: $height;
-    margin: 10px 0px 10px 0px;
+    margin: auto 0px;
     background-color: rgb(248, 125, 125);
     font-size: 18px;
     color: white;
