Begin work to fix slideshow behavior for varying image sizes

--- a/components/photo-module/client/src/styles/style.scss
+++ b/components/photo-module/client/src/styles/style.scss
@@ -315,10 +315,10 @@ $btn-margin: 106px;
   }
   
   .carousel-item {
+    max-height: 65vh;
     img {
       object-fit: fill;
       margin: 0 auto;
-      width: 100%;
     }
   }
 
