--- a/components/photo-module/client/src/styles/style.scss
+++ b/components/photo-module/client/src/styles/style.scss
@@ -336,12 +336,21 @@ $btn-margin: 106px;
   .carousel-item {
     height: 100%;
     width: 100%;
+    margin: auto;
     img {
       object-fit: fill;
-      margin: 0 auto;
+      margin: auto;
       max-width: 100%;
       max-height: 100%;
     }
+  }
+
+  .carousel-item-next, .carousel-item-prev {
+    display: flex;
+  }
+
+  .carousel-item.active {
+    display: flex;
   }
 
   .carousel-caption {
