Ensure Sass file updated

--- a/components/review-module/client/src/stylesheets/style.scss
+++ b/components/review-module/client/src/stylesheets/style.scss
@@ -167,6 +167,11 @@ review-body {
   }
 }
 
+#reviews {
+  display: flex;
+  max-width: 700px;
+}
+
 // $primary-color: rgb(75, 75, 75);
 
 // @function black($opacity) {
