--- a/components/review-module/client/src/stylesheets/style.scss
+++ b/components/review-module/client/src/stylesheets/style.scss
@@ -146,6 +146,8 @@ review-body {
 
 .arr-height {
   padding-top: 15px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 ////////////////////
@@ -165,11 +167,6 @@ review-body {
     margin-right: 20px;
     margin-left: 10px;
   }
-}
-
-#reviews {
-  display: flex;
-  max-width: 700px;
 }
 
 // $primary-color: rgb(75, 75, 75);
@@ -282,6 +279,7 @@ review-body {
 
 // // pagination numbers
 // .pagination {
+//   color: rgb(15, 114, 118);
 //   display: flex;
 //   flex-direction: row;
 //   justify-content: space-evenly;
@@ -295,9 +293,52 @@ review-body {
 //   background-color: rgb(15, 114, 118);
 //   border-color: rgb(15, 114, 118);
 //   border-radius: 50%;
+//   width: 50px;
+//   height: 50px;
+// }
+
+// .number-center {
+//   text-align: center;
+//   line-height: 2em;
 // }
 
 // .button {
-//   padding: 0 15px;
+//   // padding: 0 15px;
 //   border: 10px solid transparent;
+// }
+
+// .arrow-page {
+//   border-radius: 50%;
+//   margin-right: 10px;
+//   width: 50px;
+//   height: 50px;
+//   border: 1px solid rgb(15, 114, 118);
+// }
+
+// .arr-height {
+//   padding-top: 15px;
+// }
+
+// ////////////////////
+// // MOBILE SCREEN ///
+// ////////////////////
+
+// @media only screen and (max-width: 1200px) {
+//   .hide-first-last {
+//     display: none;
+//   }
+// }
+// @media only screen and (max-width: 1000px) {
+//   .hide-page {
+//     display: none;
+//   }
+//   .arrow-page {
+//     margin-right: 20px;
+//     margin-left: 10px;
+//   }
+// }
+
+// #reviews {
+//   display: flex;
+//   max-width: 700px;
 // }
